PoC for the list test
It seems we're not deleting all triples in the change graphs.  This
seemingly because rdflib doesn't remove them in our internal
representation.

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,8 @@
 {{page-title "SolidListTest"}}
 
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
+<ul>
+  <li><LinkTo @route="login">Login</LinkTo> </li>
+  <li><LinkTo @route="todo-list-scenario">Scenario</LinkTo> </li>
+</ul>
 
 {{outlet}}
